Support cellhashing parameter to skip tSNE